[gd_scene load_steps=15 format=3 uid="uid://cx4p3c5ie3rfk"]

[ext_resource type="Script" uid="uid://bykn2lqb5w2iw" path="res://Menus/GameOver/game_over.gd" id="1_j7jpf"]
[ext_resource type="Texture2D" uid="uid://m6hhimxre3fm" path="res://Assets/BrianSprites/Screens/perdistetonto.png" id="2_nu0ew"]
[ext_resource type="Texture2D" uid="uid://b2kelxd6toktp" path="res://Assets/input-prompts/Keyboard & Mouse/Default/keyboard_arrows_vertical.png" id="3_aptbu"]
[ext_resource type="Texture2D" uid="uid://cwt48ujqk6udm" path="res://Assets/BrianSprites/UI/fondoboton.png" id="4_8gwml"]
[ext_resource type="FontFile" uid="uid://bftmjwmvbmgcm" path="res://Assets/Fonts/Magedov_Military.ttf" id="8_5ngae"]
[ext_resource type="Texture2D" uid="uid://ca8f02maausa" path="res://Assets/input-prompts/Keyboard & Mouse/Default/keyboard_return.png" id="10_l28s3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5wjhq"]
texture_margin_left = 100.0
texture_margin_top = 30.0
texture_margin_right = 100.0
texture_margin_bottom = 50.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2dluq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bux8h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nhqju"]

[sub_resource type="Animation" id="Animation_5ngae"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/MarginContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nu0ew"]
resource_name = "fade_in"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/MarginContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Background/Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8gwml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Background/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjxba"]
_data = {
&"RESET": SubResource("Animation_8gwml"),
&"fade_in": SubResource("Animation_nu0ew"),
&"fade_out": SubResource("Animation_5ngae")
}

[node name="GameOver" type="Node2D"]
script = ExtResource("1_j7jpf")

[node name="Control" type="CanvasLayer" parent="."]

[node name="Background" type="CenterContainer" parent="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Control/Background"]
modulate = Color(1, 1, 1, 0)
position = Vector2(960, 540)
texture = ExtResource("2_nu0ew")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="GridContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/v_separation = 40

[node name="MenuTitle" type="Label" parent="Control/CenterContainer/MenuContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("8_5ngae")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_5wjhq")
text = "GAME_OVER"
horizontal_alignment = 1

[node name="ButtonsContainer" type="GridContainer" parent="Control/CenterContainer/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResetLevel" type="Button" parent="Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_5ngae")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("4_8gwml")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2dluq")
text = "RESET_LEVEL"
flat = true
icon_alignment = 1

[node name="BackToMainMenu" type="Button" parent="Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_5ngae")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("4_8gwml")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bux8h")
text = "BACK_TO_MAIN_MENU"
flat = true
icon_alignment = 1

[node name="QuitButton" type="Button" parent="Control/CenterContainer/MenuContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResetLevel")
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_5ngae")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("4_8gwml")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nhqju")
text = "QUIT"
flat = true
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 1570.0
offset_top = 930.0
offset_right = 1895.0
offset_bottom = 1055.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer2/CenterContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/MarginContainer2/CenterContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
color = Color(0.172549, 0.141176, 0.0784314, 1)

[node name="GridContainer2" type="GridContainer" parent="Control/MarginContainer2/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer2/CenterContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer2/CenterContainer/GridContainer2/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_aptbu")
expand_mode = 1

[node name="Label" type="Label" parent="Control/MarginContainer2/CenterContainer/GridContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_5ngae")
theme_override_font_sizes/font_size = 20
text = "SELECT_OPTION"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer2/CenterContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect2" type="TextureRect" parent="Control/MarginContainer2/CenterContainer/GridContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("10_l28s3")
expand_mode = 1

[node name="Label2" type="Label" parent="Control/MarginContainer2/CenterContainer/GridContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_5ngae")
theme_override_font_sizes/font_size = 20
text = "CONFIRM_OPTION"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_pjxba")
}

[connection signal="focus_entered" from="Control/CenterContainer/MenuContainer/ButtonsContainer/ResetLevel" to="." method="_on_reset_level_focus_entered"]
[connection signal="focus_exited" from="Control/CenterContainer/MenuContainer/ButtonsContainer/ResetLevel" to="." method="_on_reset_level_focus_exited"]
[connection signal="mouse_entered" from="Control/CenterContainer/MenuContainer/ButtonsContainer/ResetLevel" to="." method="_on_reset_level_mouse_entered"]
[connection signal="pressed" from="Control/CenterContainer/MenuContainer/ButtonsContainer/ResetLevel" to="." method="_on_reset_level_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_focus_entered"]
[connection signal="focus_exited" from="Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_focus_exited"]
[connection signal="mouse_entered" from="Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_mouse_entered"]
[connection signal="pressed" from="Control/CenterContainer/MenuContainer/ButtonsContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="focus_exited" from="Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="mouse_entered" from="Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Control/CenterContainer/MenuContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
